# codekeeper

./: .env.example  .gitignore  .mcp-config.json  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
codekeeper/: __init__.py
codekeeper/core/: __init__.py  annotation.py  api.py  clean.py  copyright.py  errors.py  models.py
codekeeper/infra/: __init__.py  apm.py  cache.py  config.py  logging.py  metrics.py  pool.py  snapshot.py
codekeeper/languages/: __init__.py  base.py  cpp_handler.py  factory.py  go_handler.py  java_handler.py  python_handler.py  rust_handler.py  typescript_handler.py
codekeeper/mcp/: __init__.py  __main__.py  server.py
codekeeper/security/: __init__.py
codekeeper/utils/: file.py  hash.py
docs/: API_REFERENCE.md  CONTRIBUTING.md  FAQ.md  USER_GUIDE.md  development_summary.md
tests/: api_test_framework.py  conftest.py  fixtures_language.py  test_analyze_api.py  test_annotations_api.py  test_cache.py  test_config.py  test_copyright_api.py  test_cpp_handler.py  test_go_handler.py  test_hash.py  test_java_handler.py  test_junk_api.py  test_metrics.py  test_performance_api.py  test_pool.py  test_python_handler.py  test_rust_handler.py  test_scan_api.py  test_snapshot.py  test_typescript_handler.py
