[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codekeeper"
version = "0.1.0"
description = "Code maintenance SDK for AI programming assistants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "CodeKeeper Team", email = "team@codekeeper.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tree-sitter>=0.21.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-mock>=3.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["codekeeper"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
exclude = "\\.git|\\.mypy_cache|\\.pytest_cache|\\.venv|venv"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "UP", "B", "C4", "A", "ARG", "SIM", "PGH", "RUF"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001", "S101"]
"codekeeper/core/errors.py" = ["A001"]
"codekeeper/security/__init__.py" = ["A001"]
"codekeeper/core/copyright.py" = ["A002", "E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[project.scripts]
codekeeper-mcp = "codekeeper.mcp.__main__:main"
